--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,9 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".controller.HistoryActivity"></activity>
+        <activity android:name=".controller.HistoryActivity" />
+        <activity android:name=".controller.Main2Activity" />
+        <activity android:name=".controller.StatsActivity"></activity>
     </application>
 
 </manifest>
