Fixed an issue with commentBox. Fixed warnings in layout and manifest sides. Still one remaining in StatsActivity

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,7 +3,7 @@
     package="com.depuisletemps.moodmorning">
 
     <application
-        android:allowBackup="true"
+        android:allowBackup="false"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
@@ -12,13 +12,12 @@
         <activity android:name=".controller.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
+                <action android:name="android.intent.action.VIEW" />
             </intent-filter>
         </activity>
         <activity android:name=".controller.HistoryActivity" />
-        <activity android:name=".controller.Main2Activity" />
-        <activity android:name=".controller.StatsActivity"></activity>
+        <activity android:name=".controller.StatsActivity" />
     </application>
 
 </manifest>
